# ubuntu-newsblur

./: .gitignore  CMakeLists.txt  README.md  feeds.cpp  feeds.h  main.cpp  newsblur.desktop  newsblur.pro  newsblurconnection.cpp  newsblurconnection.h  snapcraft.yaml  stories.cpp  stories.h
examples/: feedsdump.json  feedsdump.o.json  storydump.out
qml/: CMakeLists.txt
qml/newsblur/: CMakeLists.txt  FeedListPage.qml  FoldersListPage.qml  StoryPage.qml  main.qml
setup/gui/: ubuntu-newsblur.desktop
snapdump/: newsblur.wrapper
